[tool.poetry]
name = "dl4to4ocp"
version = "0.1.0"
description = ""
authors = ["Yeicor <4929005+Yeicor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

dl4to = {git = "https://github.com/dl4to/dl4to"} # The library that we are wrapping
pyvista = "^0.44.0" # dl4to dep: fixed version as latest is incompatible
kaleido = "0.4.2" # dl4to dep: fixed version as latest is broken
pyglet = "^1.5.28" # dl4to dep: fixed version as latest is incompatible
jupyter = "^1.0.0" # dl4to dep: tqdm dep in notebook mode
ipywidgets = "^8.1.2" # dl4to dep: tqdm dep in notebook mode

sdftoolbox = {git = "https://github.com/cheind/sdftoolbox"} # For dual contouring iso-surface extraction

pysdf = "^0.1.9" # For generating SDFs from meshes

build123d = "^0.7.0" # Nice way to interact with OCP

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
