[project]
name = "dl4to4ocp"
version = "0.1.0"
description = ""
authors = [{name = "Yeicor", email = "4929005+Yeicor@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dl4to",
    "pyvista>=0.48.0",
    "kaleido==1.3.0",
    "pyglet>=1.5.28",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.2",
    "sdftoolbox",
    "pysdf>=0.1.9",
    "build123d>=0.10.0",
]

[tool.uv.sources]
dl4to = {path = "vendor/dl4to"}
sdftoolbox = {git = "https://github.com/cheind/sdftoolbox"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
